Ubuntu-buildenv modified
The Dockerfile will now run apt update and upgrade
will install cmake, build-essential and python

--- a/dockerImages/ubuntu-buildenv/Dockerfile
+++ b/dockerImages/ubuntu-buildenv/Dockerfile
@@ -1,5 +1,12 @@
 FROM ubuntu
 
-RUN apt update && apt upgrade
+RUN apt update && apt upgrade -y
+
+RUN apt install -y \
+    cmake \
+    build-essential \
+    python 
+    
+
 
 WORKDIR /package
