--- a/dockerImages/ubuntu-buildenv/Dockerfile
+++ b/dockerImages/ubuntu-buildenv/Dockerfile
@@ -13,7 +13,14 @@ RUN apt install -y \
     python \
     python-sphinx \
     libboost-all-dev
-    
 
+RUN apt install -y \
+    wget
+
+RUN wget http://lemon.cs.elte.hu/pub/sources/lemon-1.3.tar.gz && tar xvzf lemon-1.3.tar.gz && cd lemon-1.3 && cmake -DCMAKE_INSTALL_PREFIX=~/lemon && make install && cd .. && rm -rf lemon-1.3
 
 WORKDIR /package
+
+RUN apt install -y \
+    libeigen3-dev \
+    libhts-dev
