Added one package for building the package smctc-sts:
Package added to the ubuntu image:
- lebgsl-dev

--- a/dockerImages/ubuntu-buildenv/Dockerfile
+++ b/dockerImages/ubuntu-buildenv/Dockerfile
@@ -26,4 +26,13 @@ RUN apt install -y \
     libhts-dev
 
 RUN apt install -y \
-    libhdf5-dev \
+    libhdf5-dev 
+
+RUN apt install -y \
+    libgoogle-glog-dev \
+    libcppunit-dev 
+
+RUN apt update && apt upgrade -y
+
+RUN apt install -y \
+    libgsl-dev
